<resources>
    <string name="app_name">MasterMind</string>
    <string name="title_activity_play_mastermind">Play Mastermind</string>

	<string name="select_red">Select red</string>
	<string name="select_blue">Select blue</string>
	<string name="select_green">Select green</string>
	<string name="select_yellow">Select yellow</string>
	<string name="select_black">Select black</string>
	<string name="select_white">Select white</string>
	<string name="select_no_color">Remove selected color</string>

	<string name="first_peg">First peg</string>
	<string name="second_peg">Second peg</string>
	<string name="third_peg">Third peg</string>
	<string name="fourth_peg">Fourth peg</string>
	<string name="fifth_peg">Fifth peg</string>
	<string name="sixth_peg">Sixth peg</string>

	<string name="check_button_text">Check</string>

	<string name="row_is">row is</string>
	<string name="peg_is">peg is </string>

	<string name="red">red</string>
	<string name="blue">blue</string>
	<string name="green">green</string>
	<string name="yellow">yellow</string>
	<string name="black">black</string>
	<string name="white">white</string>
	<string name="clear">clear</string>
	<string name="check_my_guess">Check my guess</string>
	<string name="black_correct">Correct colors in correct place</string>
	<string name="white_correct">Correct pegs in wrong place</string>

	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<string name="all_pegs_must_be_set">All the pegs must have a selction before the row can be checked</string>

	<string name="you_won">Congratulations! You won!</string>
	<string name="won_prompt">You have successfully broken the selected code!  Do you want to play again?</string>

	<string name="you_lost">Sorry, you lost!</string>
	<string name="lost_prompt">The code-maker has won this time around! Do you want to try again?</string>
	<string name="show_hint">Show hint</string>
	<string name="how_to_play_mastermind">How to play Mastermind</string>
	<string name="beginner_level_1_game">Beginner 4 Color/4 Wells/No Dups</string>
	<string name="beginner_level2_game">Beginner 6 Colors/4 Wells/No Dups allowed</string>
	<string name="original_game">Original Mastermind 6 Colors/4 Wells/Dups allowed</string>
	<string name="advanced_level1_game">Challenge 6-Colors/6 Wells/No Dups</string>
	<string name="advanced_level2_game">Brainbuster 6 Colors/6 Wells/Dups allowed</string>

</resources>