<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/peg_row"
        style="@style/Widget.Theme.MasterMind.CodeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#444444"
        android:weightSum="10"
        >

    <Space
            android:layout_width="46sp"
            android:layout_height="match_parent"
        />

    <LinearLayout
            android:id="@+id/pegs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="horizontal">

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_0"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/first_peg"
                />

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/second_peg"
                />

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/third_peg"
                />

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/fourth_peg"
                />

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_4"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/fifth_peg"
                />

        <com.chrislaforetsoftware.mm.board.MastermindPegHole
                android:id="@+id/peg_5"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/sixth_peg"
                />
    </LinearLayout>

    <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
             />
</LinearLayout>
